app/component/intro/intro.module.css
.Intro {
    margin: 14px 0 48px;
    font-size: 32px;
    display: flex;
    flex-direction: row;
}

.IntroMain {
    flex-grow: 1;
}

.IntroQuote {
    background-color: var(--theme-color-1);
    font-size: 42px;
    font-style: italic;
    left: 0;
    margin: 18px 0 0 -32px;
    padding: 8px min(128px, 10%) 8px 0;
    position: absolute;
    right: max(calc(50% - 270px), 270px);
    text-align: right;
    z-index: -1;
}

.IntroImage {
    border-radius: 12px;
    margin-top: 18px;
    height: 360px;
    width: 270px;
}

.Hi {
    font-size: 18px;
    margin: 24px 0;
}

.Name {
    text-decoration: underline;
    text-decoration-color: var(--theme-color-1);
}

@media screen and (min-width: 920px) {
    .IntroQuote {
        line-height: 62px;
    }
}

@media screen and (min-width: 700px) and (max-width: 920px) {
    .Intro {
        font-size: 24px;
    }

    .IntroQuote {
        font-size: 32px;
        line-height: 48px;
    }

    .IntroImage {
        height: 320px;
        object-fit: cover;
    }
}

@media screen and (max-width: 700px) {
    .Hi {
        font-size: 14px;
    }

    .Intro {
        flex-direction: column-reverse;
        font-size: 18px;
    }

    .Name {
        font-size: 24px;
    }

    .IntroImage {
        border-radius: 0;
        margin: -38px -24px 0 -24px;
        object-fit: cover;
        width: calc(100% + 48px);
        height: 270px;
    }

    .IntroQuote {
        right: 0;
        font-size: 24px;
        text-align: center;
        padding: 8px 0;
    }

    .QuoteBreak {
        display: none;
    }
}

